# FormulaSelfRepairLLM

./: .gitignore  README.md  notes.txt  pyproject.toml  runtimeconfig.json  sample_brokencode.md  temp.4ml  training.json
old/: main.py
src/: finetune_gpt.py  formula_agent.py  formula_output.txt  formula_tools.py  main.py  memory.py  prompts.py  sample_brokencode.4ml  sample_config.py  temp.4ml
