[tool.poetry]
name = "formulaselfrepairllm"
version = "0.1.0"
description = "Language model to fix broken FORMULA code"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.1"
langchain = "^0.0.312"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
